<resources>
    <string name="app_name">LostArk Guide</string>


    <string name="log_button">LOG IN</string>
    <string name="register_button">REGISTER</string>
    <string name="guest_button">GUEST</string>
    <string name="search_button">BUSCAR</string>

    <string name="user_name">USUARIO</string>
    <string name="password_name">CONTRASEÑA</string>


    <string name="subClass_details">SubClass Details</string>
    <string name="class_details">Class Details</string>
    <string name="SubClass_name">SubClass name</string>

    <string name="class_item">class_item</string>


    <string name="previous_button_description">Botón usado para seleccionar subclase anterior</string>
    <string name="next_button_description">Botón usado para seleccionar subclase posterior</string>
    <string name="star_button_description">Botón usado para seleccionar subclase como favorita</string>

</resources>