<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada"
    tools:context=".init.MainActivity">

    <Button
        android:id="@+id/register_button"
        android:layout_width="242dp"
        android:layout_height="52dp"
        android:text="@string/register_button"
        android:textSize="25sp"
        android:fontFamily="serif"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:strokeColor="#860AE6"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/guest_button"
        android:layout_width="243dp"
        android:layout_height="51dp"
        android:text="@string/guest_button"
        android:textSize="25sp"
        android:fontFamily="serif"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825"
        app:strokeColor="#860AE6"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="237dp"
        android:layout_height="52dp"
        android:fontFamily="serif"
        android:onClick="logi"
        android:text="@string/log_button"
        android:textSize="25sp"

        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        app:strokeColor="#860AE6"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>