<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_titulo">

    <TextView
        android:id="@+id/password_nameR"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginBottom="280dp"
        android:fontFamily="serif"
        android:shadowColor="#5019DB"
        android:shadowDx="6"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/password_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="251dp"
        android:layout_height="63dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="serif"
        android:text="@string/register_button"
        android:textSize="30sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#860AE6"
        app:strokeWidth="4sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_nameR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="serif"
        android:shadowColor="#5019DB"
        android:shadowDx="6"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/user_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/user_inputR"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/input_test_type"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_inputR"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/input_test_type"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>