<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_titulo">

    <TextView
        android:id="@+id/password_nameL"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="serif"
        android:shadowColor="#5019DB"
        android:shadowDx="6"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/password_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_inputL"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/log_button"
        android:layout_width="272dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="serif"
        android:text="@string/log_button"
        android:textSize="30sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#860AE6"
        app:strokeWidth="4sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_nameL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="serif"
        android:shadowColor="#5019DB"
        android:shadowDx="6"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/user_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/user_inputL"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_test_type"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_nameL"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/password_inputL"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_test_type"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_nameL"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>